# griot-app

./: .dockerignore  .env.example  .env.oauth.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.postgres  LICENSE  README.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.test.yml  pyproject.toml  pyrightconfig.json  requirements-ai.txt  requirements-auth.txt  requirements-core.txt  requirements-db.txt  requirements-media.txt  requirements-minimal.txt  requirements-ml.txt  requirements-utils.txt  requirements-web.txt  start_backend.sh
.github/: dependabot.yml
.github/instructions/: copilot-instrudctions.md
.github/workflows/: dependency-updates.yml
app/: database.py  main.py  models.py
app/config/: README.md  __init__.py  caption_styles.json  caption_styles_old.json
app/middleware/: __init__.py  security.py  tts_validation.py
app/services/: __init__.py  anyllm_service.py  browserless_service.py  (+2 more)
docs/: AGENTS_ENDPOINT_REDESIGN.md  ANYLLM_INTEGRATION.md  API_KEY_MANAGEMENT.md  BROWSERLESS_INTEGRATION_COMPLETE.md  BROWSERLESS_MIGRATION.md  EMAIL_CONFIRMATION_IMPLEMENTATION.md  ENVIRONMENT_VARIABLES.md  NEW_FEATURES.md  RATE_LIMITING.md  README.md  S3_CACHE_PERSISTENCE.md  SCREENSHOT_API_ALIGNMENT_FIX.md  TESTING_EMAIL_CONFIRMATION.md  VIDEO_SEARCH_IMPROVEMENTS.md  auth-comparison.md  oauth-setup-guide.md
frontend/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: analyze_extraction.py  deploy-production.sh  deploy.sh  deploy_s3_fix.sh  enable-buildkit.sh  fix-api-key.sh  fix_password_hashes.py  init-music.sh  init_database.py  init_db.sh  migrate_add_subscription_columns.py  migrate_s3_cache.py  migrate_users_table.py  monitor-packages.py  quick-start.sh  rename-app.sh  reset_users.py  setup_admin.py  setup_admin_user.py  startup.sh
tests/: conftest.py  test_agents.py  test_ai.py  test_audio.py  test_auth.py  test_dashboard.py  test_health.py  test_image.py  test_media.py  test_misc.py  test_pollinations_service_endpoints.py  test_pollinations_video_analysis.py  test_video.py  test_video_pipeline_caption_sync.py
(+599 files in other folders)
